--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -16,6 +16,16 @@
 	<dependencies>
 
 
+		<!-- Link Backend Project -->
+
+		<dependency>
+			<groupId>net.kzn</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
+		</dependency>
+
+
 		<!-- JAVA EE API -->
 
 		<dependency>
@@ -34,22 +44,22 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- Spring WEB MVC -->
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-webmvc</artifactId>
-    <version>4.3.17.RELEASE</version>
-</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.3.17.RELEASE</version>
+		</dependency>
 
 		<!-- JSTL -->
-<dependency>
-    <groupId>jstl</groupId>
-    <artifactId>jstl</artifactId>
-    <version>1.2</version>
-</dependency>
-		
-		
-		
-		
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -57,8 +67,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-				<source>1.8</source>
-				<target>1.8</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
