--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<javaee.version>7.0</javaee.version>
-		<spring.version>4.3.18.RELEASE</spring.version>
+		<spring.version>4.3.17.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -43,11 +43,23 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Spring WEB MVC -->
+		<!-- SPRING -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.3.17.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- JSTL -->
